@@ -3,7 +3,10 @@ package service;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.util.ArrayList;
+import java.util.List;
 
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
@@ -16,7 +19,7 @@ public class TMDBService {
     public static JsonObject getMovieDetails(int movieId) {
         try {
             String urlStr = BASE_URL + movieId + "?api_key=" + API_KEY + "&language=pt-BR";
-            URL url = new URL(urlStr); // Solve JAVA 11+ issue compliance
+            URL url = new URI(urlStr).toURL(); // ✅ substituindo new URL(String)
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 
             conn.setRequestMethod("GET");
@@ -44,33 +47,74 @@ public class TMDBService {
             return null;
         }
     }
-    public static JsonArray getPopularMovies(int page) {
+
+    public static List<String> getRandomMovies() {
+        List<String> movieTitles = new ArrayList<>();
         try {
-            String urlStr = "https://api.themoviedb.org/3/movie/popular?api_key=" + API_KEY + "&language=pt-BR&page=" + page;
-            URL url = new URL(urlStr);
+            String urlStr = "https://api.themoviedb.org/3/discover/movie?api_key=" + API_KEY + "&sort_by=popularity.desc&page=1&language=pt-BR";
+            URL url = new URI(urlStr).toURL(); // ✅ substituindo new URL(String)
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-    
+
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
-    
+
             if (conn.getResponseCode() != 200) {
-                System.err.println("Erro ao buscar filmes populares: " + conn.getResponseCode());
-                return null;
+                System.err.println("Erro ao buscar filmes aleatórios: " + conn.getResponseCode());
+                return movieTitles;
             }
-    
+
             BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
             StringBuilder response = new StringBuilder();
             String inputLine;
-    
+
             while ((inputLine = in.readLine()) != null) {
                 response.append(inputLine);
             }
             in.close();
             conn.disconnect();
-    
+
+            JsonObject jsonResponse = JsonParser.parseString(response.toString()).getAsJsonObject();
+            JsonArray results = jsonResponse.getAsJsonArray("results");
+
+            for (int i = 0; i < results.size(); i++) {
+                JsonObject movie = results.get(i).getAsJsonObject();
+                movieTitles.add(movie.get("title").getAsString());
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        return movieTitles;
+    }
+
+    public static JsonArray getPopularMovies(int page) {
+        try {
+            String urlStr = "https://api.themoviedb.org/3/movie/popular?api_key=" + API_KEY + "&language=pt-BR&page=" + page;
+            URL url = new URI(urlStr).toURL(); // ✅ substituindo new URL(String)
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+
+            conn.setRequestMethod("GET");
+            conn.setRequestProperty("Accept", "application/json");
+
+            if (conn.getResponseCode() != 200) {
+                System.err.println("Erro ao buscar filmes populares: " + conn.getResponseCode());
+                return null;
+            }
+
+            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            StringBuilder response = new StringBuilder();
+            String inputLine;
+
+            while ((inputLine = in.readLine()) != null) {
+                response.append(inputLine);
+            }
+            in.close();
+            conn.disconnect();
+
             JsonObject jsonResponse = JsonParser.parseString(response.toString()).getAsJsonObject();
             return jsonResponse.getAsJsonArray("results");
-    
+
         } catch (Exception e) {
             e.printStackTrace();
             return null;
